tests/type-reconstruction/ill-typed/infinite-type/infinite-type-3.stella
language core;

extend with #type-reconstruction;
  
fn main(n : auto) -> auto {
  return n(n);
}
